--- a/BlazorApiClient/Pages/Index.razor
+++ b/BlazorApiClient/Pages/Index.razor
@@ -1,7 +1,24 @@
 ﻿@page "/"
 
+
+
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+@if (_isLoggedIn)
+{
+    <h1>You are Logged In</h1>
+    <button class="btn btn-danger" @onclick="LogOut">Log Out</button>
+}
+else
+{
+    <h1>Please Log In</h1>
 
+    <EditForm Model="login" OnValidSubmit="HandleValidSubmit">
+        <InputText @bind-Value="login.UserName" />
+        <InputText type="password" @bind-Value="login.Password" />
+
+
+        <button class="btn btn-success" type="submit">Log In</button>
+    </EditForm>
+}
 
